<resources>
    <string name="app_name">WikiMuseo</string>
    <string name="txvTitulo1Historia">\"Los Museos y su Historia\"</string>
    <string name="historia_edadmedia">#historia #edadmedia</string>
    <string name="museo_antiguo">#museo #antiguo</string>
    <string name="primera_etapa">Primera Etapa</string>
    <string name="_1178_a_c_siglo_ix">1178 a.c - siglo IX</string>
    <string name="mas_detalles">SIGUIENTE</string>
    <string name="galeria">Galeria</string>
    <string name="antiguoimagen">antiguoimagen</string>
    <string name="imgAntiguo1">antiguoimg</string>
    <string name="imgMeso">meso</string>
    <string name="txv_antiguedad_edad_media">Antiguedad - Edad Media</string>
    <string name="txv_Descript">Se abre un museo de objetos bélicos en la puerta occidental de la ciudad de Assur que pertenecía a Babilonia</string>
    <string name="Alejandría">Alejandría III a.c.</string>
    <string name="roma">Roma Siglo I d.c.</string>
    <string name="descrip_3">El coleccionismo se tranforma en signo de poder, algunas colecciones se mostraban en el Templo Venus Genetrix</string>
    <string name="medieval">Siglo V - Siglo IX</string>
    <string name="descrip_4">La iglesia toma el control y muchas piezas son destruidas, solo el Emperador Constantino mostraba su colección en fiestas y eventos</string>
    <string name="luvreimg">luvreimg</string>
    <string name="boton_luvre1">360º</string>
    <string name="boton_luvre2">VISITALO</string>
    <string name="txvDatoGris1">Paris - Francia</string>
    <string name="txvdatoGris2">♡214K</string>
    <string name="txvDatoGris3">Abierto desde 1793</string>
    <string name="txvDatoGris4">Miercoles a Lunes</string>
    <string name="txvCuerpoLuvre">Inaugurado a finales del siglo XVIII, el Museo del Louvre es el museo más importante de Francia y uno de los más visitados del mundo. Actualmente recibe más de ocho millones de visitantes cada año.</string>
    <string name="texSubtituloLuvre">Colecciones</string>
    <string name="txvDatoGris6">Ver Todo</string>
    <string name="txvDatoGris5"><![CDATA[Leer Mas >]]></string>
    <string name="txvDatoGris7">ANTIGÜEDADES EGIPCIAS</string>
    <string name="imgEgipto1">egipto1</string>
    <string name="txvFlecha1">»</string>
    <string name="txvDatoGris8">ARTES DEL ISLAM</string>
    <string name="txvDatoGris9">ESCULTURAS</string>
    <string name="txvDatoGris10">PINTURAS</string>
    <string name="imgMac">mac</string>
    <string name="txvDatoGris11">Lima - Perú</string>
    <string name="txvDatoGris12">♡204K</string>
    <string name="txvDatoGris13">Abierto desde 2013</string>
    <string name="txvDatoGris14">Martes a Domingo</string>
    <string name="txvDatoGris15">\"Museo de Arte Contemporáneo de Lima\"</string>
    <string name="txvDatoGris16">El MAC Lima apunta a ser una institución articulada con su entorno urbano y con las sensibilidades y debates de su tiempo, aliada con la comunidad artística y abierta a la diversidad de públicos.</string>
    <string name="texSubtituloMac">Exposiciones</string>
    <string name="txv_sub2">DEL CUARTO ROJO. Transformance coreográfica en homenaje a Rafael Hastings</string>
    <string name="mac_expo1">mac_expo1</string>
    <string name="txv_sub1">Exposición</string>
    <string name="txv_sub4">LA RESISTENCIA DEL PINCEL. La pintura, lo popular y lo nacional</string>
    <string name="museo_arte">Museo_arte</string>
    <string name="txvCuerpoArte">Establecimientos que, además de exhibir y promocionar obras de arte, se dedica a su venta, siendo entonces por lo general un espacio más reducido (equivalente a cualquier otro local comercial) y limitando el periodo de exhibición a un tiempo determinado, pasado el cual se desmonta la exposición y se monta una nueva. El oficio y técnica de su gestión se denomina galerismo.</string>
    <string name="texSubtituloArte">Pinturas Valiosas</string>
    <string name="imgValioso1">valioso1</string>
    <string name="txvAutor1">Leonardo da Vinci - Salvator Mundi</string>
    <string name="txvFecha1">1490 - 1519</string>
    <string name="txvPrecio1">Precio: $507.4 millones</string>
    <string name="imgvalioso2">valioso2</string>
    <string name="txvAutor2">Willem de Kooning - Interchange</string>
    <string name="txvFecha2">1955</string>
    <string name="txvPrecio2">Precio: $350.4 millones</string>
    <string name="imgvalioso3">valioso3</string>
    <string name="txvAutor3">Paul Cézanne - Los Jugadores de cartas</string>
    <string name="txvFecha3">1892 - 1893</string>
    <string name="txvPrecio3">Precio: $307.8 millones</string>
    <string name="imgvalioso4">valioso4</string>
    <string name="txvAutor4">Andy Warhol - Orange Marilyn</string>
    <string name="txvFecha4">1964</string>
    <string name="txvPrecio4">Precio: $248 millones</string>
    <string name="txvvalioso5">valioso5</string>
    <string name="txvAutor5">Paul Gauguin - Nafea faa Ipoipo?</string>
    <string name="txvFecha5">1892</string>
    <string name="txvPrecio5">Precio: $247.2 millones</string>
    <string name="imgvalioso6">valioso6</string>
    <string name="txvAutor6">Jackson Pollock - Number 17A</string>
    <string name="txvFecha6">1948</string>
    <string name="txvPrecio6">Precio: $233.3 millones</string>
    <string name="el_museo_tuvo_su_origen_en_la_recogida_y_conservaci_n_de_objetos_valiosos_a_los_que_hoy_daremos_el_nombre_de_bienes_culturales_y_que_en_principio_se_reunieron_para_ostentaci_n_de_poder">El museo tuvo su origen en la recogida y conservación de objetos valiosos, a los que hoy daremos el nombre de bienes culturales, y que, en principio, se reunieron para ostentación de poder.</string>
    <string name="txvmeso">Siglo IX a.c. Assur</string>
    <string name="descriptdos">Tolomeo Filadelfo utiliza el término \"Mouseum\" para designar su centro cultural en Alejandría, un centro de estudios pluridisciplinar.</string>
    <string name="textolouvre">\"Museo de Louvre\"</string>
    <string name="museo_de_arte">\"Museo de Arte\"</string>
    <string name="comprar">COMPRAR</string>
    <string name="env_a_tu_oferta">ENVÍA TU OFERTA</string>
    <string name="texto_curiosidades_collares_perros">
        Este museo abarca 5 siglos de historia a través de más de 130 collares.
        Se encuentra en el Castillo de Leeds, más concretamente en un antiguo establo junto al foso. El propio castillo es un gran atrayente turístico, ya que se trata de un castillo del siglo XI.
        \n\n
    </string>
    <string name="texto_curiosidades_collares_perros2">
        El más antiguo es de finales del s. XV y es un collar de mastín de rebaño hecho de hierro que fue usado para protegerse de lobos y osos que vagaban por Europa en ese momento. También podemos encontrar otros collares hechos con neumáticos, plástico, etc.
        \n\n
        En 1977 Gertrude Hunt donó a la Leeds Castle Foundation una colección de sesenta collares, que iban desde el siglo XVI al XVII. Esto lo hizo en memoria a su marido John Hunt, el famoso historiador medieval; ambos habían dedicado gran parte de su vida a coleccionar diversos objetos, pero Gertrude tenía una predilección especial por los collares para perros. Desde esta donación la colección ha aumentado considerablemente, mediante otras donaciones o compras por parte del museo.
        \n\n
    </string>
    <string name="noticia_texto">
        La gran mayoría lo hace, con absoluta fidelidad al término, por amor al arte. El mismo amor al arte que tenía el recordado museólogo Lucho Repetto, predecesor del actual programa. “Somos un país multicultural y esto hay que ponerlo en valor”, resalta la conductora. Inés, nacida en Barcelona, llegó al Perú por una beca de gestión cultural en el Centro Cultural de España.
        \n\n
        Así comenzó a conocer nuestros circuitos culturales y a entender cómo funcionaban. Años después entró a trabajar en el Ministerio de Educación y estuvo involucrada en el proyecto Aprendo en Casa, pero detrás de cámaras.
        \n\n
        Así supo del casting para conducir Museo sin límites. Este mes celebra su primer año frente al programa, que estrena temporada con una visita al fascinante Museo del Prado, en Madrid.
        \n\n
    </string>
    <string name="noticia_texto1">
        Ministra de Cultura, Patricia Balbuena, lamentó incendio del Museo Nacional de Río de Janeiro, ocurrido el último domingo.
        \n\n
        Explicó que en el Perú hay 56 museos registrados en el Sistema Nacional de Museos, 13 de los cuales están en Lima, 14 en el norte del país, 14 en el centro y otros 15 en el sur.
        \n\n
        Precisó que solo ocho museos cuentan con el certificado de seguridad emitido por las oficinas de Defensa Civil de las municipalidades respectivas.
        \n\n
        "Hemos pasado a tener 14 museos con planes de seguridad. Estamos pendientes de aprobar seis planes de seguridad más del mismo número de museos y hemos hecho un mapa de museos en situación vulnerable", señaló.
        \n\n
        Balbuena indicó que el Ministerio de Economía y Finanzas destinó 6 millones de soles al portafolio de Cultura para la formulación de expedientes que permitan la inversión en la optimización, ampliación, reposición y rehabilitación de museos.
        \n\n
    </string>
    <string name="noticia_texto2">
        Desde geolocalizadores que orientan y siguen a los visitantes, gafas para recibir información adicional de las obras expuestas, páginas web, redes sociales, multimedia y aplicaciones especiales, las cunas de exposición del arte en el mundo son los espacios físicos que mejor se visten de la tecnología actual para seguir vigentes.
        \n\n
        Los hay en todas partes del mundo, conservan y exhiben las obras de arte más importantes de la historia, aunque no sólo son edificios dedicados a estos fines, sino que también contemplan otras disciplinas como la arqueología, historia, monografía, ciencia, agricultura, etc. Toda información que pueda resguardarse para compartir durante el paso del tiempo es abrazada por distintos museos. El objetivo: proteger y difundir el conocimiento.
        \n\n
        Hasta no hacen muchos años atrás conocer el “Retrato del mercader Gisze” de Hans Holbein el Joven, o “La botella de Anís del Mono” de Juan Gris, “La Gioconda” de Leonardo Da Vinci, o tantas otras reconocidas obras de arte requería de un paquete turístico destinado simplemente a recorrer museos y dedicarle unas cuantas únicas y preciadas horas a cada espacio.
        \n\n
        Quien no pudiera hacer esos instructivos viajes debería conformarse con ver los cuadros en las enciclopedias de arte para obtener datos con precisión. Sin embargo, las cosas cambiaron, y el extenso brazo de la tecnología permite apreciar aquellos cuadros casi como si estuviéramos en el mismísimo Museo Reina Sofía de España, y luego con un clic trasladarnos al MoMA (Museo de Arte Moderno) para recorrer la galería de Paul Cézanne desde 1839 a 1906.
        \n\n
    </string>
    <string name="exhibicion">Exhibicion</string>
    <string name="contextual">Contextual</string>
    <string name="difusor">Difusor</string>
    <string name="actividad">Actividad</string>
    <string name="artistas">Grandes Artistas</string>
    <string name="politicas_de_privacidad">Politicas de privacidad</string>
    <string name="tours">Tours</string>
</resources>