<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Snow_Color"
    tools:context=".HistoriaeActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:contentDescription="@string/imgAntiguo1"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/antiguedad" />

    <Button
        android:id="@+id/button4"
        style="@style/boton_historia_subventanasa"
        android:text="@string/galeria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        style="@style/boton_historia_subventanasb"
        android:text="@string/mas_detalles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="-67dp"
        android:background="@color/Snow_Color"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/Snow_Color"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toTopOf="@+id/scrllLuvre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/scrllLuvre"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/scroll_vert_eli">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txvHashtag9"
                    style="@style/historia_greytext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/historia_25"
                    android:layout_weight="1"
                    android:text="@string/museo_antiguo"
                    app:layout_constraintBottom_toTopOf="@+id/txvHashtag"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/txvEtapa4"
                    style="@style/historia_greytext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/historia_25"
                    android:layout_weight="1"
                    android:text="@string/primera_etapa"
                    android:textAlignment="viewEnd"
                    app:layout_constraintBottom_toTopOf="@+id/tcvEtapa2"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txvHashtag10"
                    style="@style/historia_greytext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/historia_25"
                    android:fontFamily="sans-serif"
                    android:text="@string/historia_edadmedia"
                    android:textAlignment="viewStart"
                    app:layout_constraintBottom_toTopOf="@+id/txvTituloH1"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tcvEtapa4"
                    style="@style/historia_greytext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/historia_25"
                    android:text="@string/_1178_a_c_siglo_ix"
                    android:textAlignment="viewEnd"
                    app:layout_constraintBottom_toTopOf="@+id/txvTituloH1"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <TextView
                android:id="@+id/txvTituloH4"
                style="@style/historia_tittletext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txvTitulo1Historia" />

            <TextView
                android:id="@+id/txvBodyH2"
                style="@style/historia_bodytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/el_museo_tuvo_su_origen_en_la_recogida_y_conservaci_n_de_objetos_valiosos_a_los_que_hoy_daremos_el_nombre_de_bienes_culturales_y_que_en_principio_se_reunieron_para_ostentaci_n_de_poder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvTituloH1" />

            <TextView
                android:id="@+id/txvTituloH5"
                style="@style/historia_tittletext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/historia_10"
                android:layout_weight="1"
                android:text="@string/txv_antiguedad_edad_media"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvBodyH1" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="200dp"
                        android:layout_height="218dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="30dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:contentDescription="@string/imgMeso"
                                app:srcCompat="@drawable/meso"
                                tools:ignore="ImageContrastCheck" />

                            <TextView
                                android:id="@+id/txvMeso"
                                style="@style/historia_text_card"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/txvmeso"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/txv_descrip1"
                                style="@style/historia_greytext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="5dp"
                                android:paddingRight="5dp"
                                android:paddingBottom="5dp"
                                android:text="@string/txv_Descript"
                                android:textAlignment="center" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="200dp"
                        android:layout_height="218dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="30dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:contentDescription="@string/imgMeso"
                                app:srcCompat="@drawable/alejandria"
                                tools:ignore="ImageContrastCheck" />

                            <TextView
                                android:id="@+id/txvAlej"
                                style="@style/historia_text_card"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Alejandría"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/txv_descrip2"
                                style="@style/historia_greytext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="5dp"
                                android:paddingRight="5dp"
                                android:paddingBottom="5dp"
                                android:text="@string/descriptdos"
                                android:textAlignment="center" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="200dp"
                        android:layout_height="218dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="30dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView6"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:contentDescription="@string/imgMeso"
                                app:srcCompat="@drawable/roma"
                                tools:ignore="ImageContrastCheck" />

                            <TextView
                                android:id="@+id/txvRom"
                                style="@style/historia_text_card"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/roma"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/txv_descrip3"
                                style="@style/historia_greytext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="5dp"
                                android:paddingRight="5dp"
                                android:paddingBottom="5dp"
                                android:text="@string/descrip_3"
                                android:textAlignment="center" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="200dp"
                        android:layout_height="218dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="30dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:contentDescription="@string/imgMeso"
                                app:srcCompat="@drawable/iglesia"
                                tools:ignore="ImageContrastCheck" />

                            <TextView
                                android:id="@+id/txvMed"
                                style="@style/historia_text_card"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/medieval"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/txv_descrip4"
                                style="@style/historia_greytext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="5dp"
                                android:paddingRight="5dp"
                                android:paddingBottom="5dp"
                                android:text="@string/descrip_4"
                                android:textAlignment="center" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>